--- a/template/docs/index.html
+++ b/template/docs/index.html
@@ -10,6 +10,7 @@
 <body>
   <div id="app"></div>
   <script src="https://unpkg.com/docute@3/dist/docute.js"></script>
+  <script src="https://unpkg.com/docute-iframe"></script>
   <script src="./config.js"></script>
 </body>
 </html>
